testsuite/tests/typing-rectypes-bugs/pr5343_bad.compilers.reference
File "pr5343_bad.ml", line 11, characters 2-14:
11 |   type u = u t and v = v t
       ^^^^^^^^^^^^
Error: The type abbreviation u is cyclic:
         u = u t,
         u t contains u
